# demo-repo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
src/: __init__.py  cli.py  models.py  store.py
tests/: test_cli.py  test_models.py  test_store.py
